updated auto send working now